--- a/productos/static/productos/css/styles.css
+++ b/productos/static/productos/css/styles.css
@@ -5,6 +5,7 @@
 
 a {
     text-decoration: none;
+    cursor: pointer;
 }
 
 body {
@@ -40,6 +41,10 @@ header {
     display: flex;
     align-items: center;
     gap: 8px;
+}
+
+.carrito .boton-card {
+    margin-top: 0;
 }
 
 .nombre {
@@ -462,6 +467,7 @@ svg {
 
 .precio-item-carrito {
     font-weight: 700;
+    flex-shrink: 0;
 }
 
 .precio-item-carrito::before {
